force-app/main/default/objects/Room_Amenity__c/Room_Amenity__c.object-meta.xml
<CustomObject>
    <label>Room Amenity</label>
    <pluralLabel>Room Amenities</pluralLabel>
    <nameField>
        <label>Amenity Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>