force-app/main/default/objects/Room_Amenity__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName><label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Room Features</fullName><default>true</default><label>Room Features</label></value>
            <value><fullName>Wellness</fullName><default>false</default><label>Wellness</label></value>
            <value><fullName>Dining</fullName><default>false</default><label>Dining</label></value>
            <value><fullName>Services</fullName><default>false</default><label>Services</label></value>
            <value><fullName>Experiences</fullName><default>false</default><label>Experiences</label></value>
            <value><fullName>Connectivity</fullName><default>false</default><label>Connectivity</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>