force-app/main/default/objects/Room_Amenity__c/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName><label>Icon</label>
    <type>Text</type><length>80</length>
<unique>false</unique><externalId>false</externalId>
    <description>SVG symbol ID (e.g. icon-pool) or Unicode glyph rendered in LWC components.</description>
</CustomField>