force-app/main/default/objects/Room_Amenity__c/fields/Is_Highlight__c.field-meta.xml
<CustomField>
    <fullName>Is_Highlight__c</fullName><label>Is Highlight</label>
    <type>Checkbox</type><defaultValue>false</defaultValue>
</CustomField>