force-app/main/default/objects/Room_Amenity__c/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName><label>Room</label>
    <type>Lookup</type>
    <referenceTo>Hotel_Room__c</referenceTo>
    <relationshipLabel>Amenities</relationshipLabel>
    <relationshipName>Amenities</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>