force-app/main/default/objects/Room_Amenity__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName><label>Sort Order</label>
    <type>Number</type><precision>5</precision><scale>0</scale>
<unique>false</unique><externalId>false</externalId>
</CustomField>